--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@types/cli-table": "^0.3.2",
     "@types/express": "^4.17.18",
     "@types/pouchdb": "^6.4.0",
     "body-parser": "^1.20.2",
+    "cli-table": "^0.3.11",
     "clipanion": "^4.0.0-rc.2",
     "elysia": "0.7.13",
     "express": "^4.18.2",
