--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/express": "^4.17.18",
     "@types/pouchdb": "^6.4.0",
+    "body-parser": "^1.20.2",
     "elysia": "0.7.13",
     "express": "^4.18.2",
     "pouchdb": "^8.0.1",
