--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "pouchdb": "^8.0.1",
     "pouchdb-server": "^4.2.0",
     "prettier": "^3.0.3",
-    "simple-runtypes": "^7.1.3"
+    "simple-runtypes": "^7.1.3",
+    "wretch": "^2.7.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
