--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.18.2",
     "pouchdb": "^8.0.1",
     "pouchdb-server": "^4.2.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "simple-runtypes": "^7.1.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
