--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cd db && bun run --watch ../src/db.ts"
+    "dev": "cd db && bun run --watch ../src/db.ts",
+    "cli": "bun run ./src/cli/index.ts"
   },
   "name": "optd",
   "module": "index.ts",
