--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "pouchdb-server": "^4.2.0",
     "prettier": "^3.0.3",
     "simple-runtypes": "^7.1.3",
-    "wretch": "^2.7.0"
+    "wretch": "^2.7.0",
+    "yaml": "^2.3.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
