--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "dependencies": {
     "@types/cli-table": "^0.3.2",
     "@types/express": "^4.17.18",
+    "@types/inquirer": "^9.0.6",
     "@types/pouchdb": "^6.4.0",
     "body-parser": "^1.20.2",
     "cli-table": "^0.3.11",
     "clipanion": "^4.0.0-rc.2",
     "elysia": "0.7.13",
     "express": "^4.18.2",
+    "inquirer": "^9.2.11",
     "pouchdb": "^8.0.1",
     "pouchdb-server": "^4.2.0",
     "prettier": "^3.0.3",
