--- a/.gitignore
+++ b/.gitignore
@@ -52,8 +52,8 @@ build/Release
 
 # Dependency directories
 
-node_modules/
 api/node_modules/
+cli/node_modules
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
