--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/pouchdb": "^6.4.2",
     "pouchdb": "^8.0.1",
     "pouchdb-server": "^4.2.0",
     "reflect-metadata": "^0.1.13",
