--- a/api/package.json
+++ b/api/package.json
@@ -27,8 +27,10 @@
     "bcrypt": "^5.1.1",
     "casbin": "^5.27.1",
     "express-pouchdb": "^4.2.0",
+    "knex": "^3.1.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.3",
     "pouchdb": "^8.0.1",
     "pouchdb-server": "^4.2.0",
     "reflect-metadata": "^0.1.13",
