add lorri to direnv

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,10 @@
-export PATH="$PATH:./node_modules/.bin"
-use_nix
+#!/usr/bin/env bash
+# the shebang is ignored, but nice for editors
 
-git config --local core.hooksPath $PWD/.githooks
+if type -P lorri &>/dev/null; then
+  eval "$(lorri direnv)"
+else
+  echo 'while direnv evaluated .envrc, could not find the command "lorri" [https://github.com/nix-community/lorri]'
+  use nix
+fi
+export PATH="$PATH:./node_modules/.bin"
