--- a/cli/package.json
+++ b/cli/package.json
@@ -3,17 +3,22 @@
     "@types/cli-table": "^0.3.2",
     "@types/express": "^4.17.18",
     "@types/inquirer": "^9.0.6",
+    "@types/node": "^20.12.7",
     "@types/pouchdb": "^6.4.0",
     "body-parser": "^1.20.2",
     "cli-table": "^0.3.11",
     "clipanion": "^4.0.0-rc.2",
+    "core-js": "^3.37.0",
     "elysia": "0.7.13",
     "express": "^4.18.2",
     "inquirer": "^9.2.11",
     "pouchdb": "^8.0.1",
     "pouchdb-server": "^4.2.0",
     "prettier": "^3.0.3",
+    "reflect-metadata": "^0.2.2",
     "simple-runtypes": "^7.1.3",
+    "tsyringe": "^4.8.0",
+    "url-parse": "^1.5.10",
     "wretch": "^2.7.0",
     "yaml": "^2.3.2"
   },
