--- a/gui/package.json
+++ b/gui/package.json
@@ -28,6 +28,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-node": "^5.1.1",
 		"autoprefixer": "^10",
 		"daisyui": "^3",
 		"postcss": "^8",
