--- a/api/package.json
+++ b/api/package.json
@@ -26,8 +26,10 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/cookie-parser": "^1.4.7",
     "bcrypt": "^5.1.1",
     "casbin": "^5.27.1",
+    "cookie-parser": "^1.4.6",
     "express-pouchdb": "^4.2.0",
     "knex": "^3.1.0",
     "passport": "^0.6.0",
