--- a/gui/package.json
+++ b/gui/package.json
@@ -28,6 +28,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@auth/core": "^0.32.0",
 		"@sveltejs/adapter-node": "^5.1.1",
 		"autoprefixer": "^10",
 		"daisyui": "^3",
